// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker edit works 1`] = `
<div>
  <span
    class="input-group date-time-picker-pf input-group"
  >
    <input
      aria-label="date-time-picker-input"
      class="date-input form-control"
      type="text"
      value="2019-02-22"
    />
    <span
      class="date-picker-pf input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-calendar"
      />
    </span>
    <span
      class="clear-button input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-close"
      />
    </span>
  </span>
</div>
`;

exports[`DatePicker prefils the value from prop 1`] = `
<div>
  <span
    class="input-group date-time-picker-pf input-group"
  >
    <input
      aria-label="date-time-picker-input"
      class="date-input form-control"
      type="text"
      value="2019-02-21"
    />
    <span
      class="date-picker-pf input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-calendar"
      />
    </span>
    <span
      class="clear-button input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-close"
      />
    </span>
  </span>
</div>
`;

exports[`DatePicker renders properly 1`] = `
<div>
  <span
    class="input-group date-time-picker-pf input-group"
  >
    <input
      aria-label="date-time-picker-input"
      class="date-input form-control"
      type="text"
      value=""
    />
    <span
      class="date-picker-pf input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-calendar"
      />
    </span>
    <span
      class="clear-button input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-close"
      />
    </span>
  </span>
</div>
`;
